[gd_scene load_steps=11 format=2]

[ext_resource path="res://levels/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://enemies/enemy_spawn_indicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level_infinite.gd" type="Script" id=3]
[ext_resource path="res://ui/hud/hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/draggable_items.gd" type="Script" id=5]
[ext_resource path="res://levels/tilemap.gd" type="Script" id=7]
[ext_resource path="res://scripts/screen_shake.gd" type="Script" id=8]
[ext_resource path="res://ui/hud/inventory/background.png" type="Texture" id=9]
[ext_resource path="res://ui/fonts/wendy.tres" type="DynamicFont" id=10]

[sub_resource type="Environment" id=1]
background_mode = 4
background_canvas_max_layer = 1
glow_enabled = true
glow_intensity = 0.4
glow_strength = 0.9
glow_bloom = 0.3
glow_blend_mode = 0
glow_hdr_threshold = 0.0
adjustment_enabled = true
adjustment_contrast = 1.06

[node name="Level11" type="Node2D"]
script = ExtResource( 3 )
enemy_speed = 100.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 8 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 12, 12 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 2, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 2, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 2, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 2, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 2, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 2, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 2, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 2, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 2, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0 )
script = ExtResource( 7 )

[node name="EnemySpawnIndicator" parent="." instance=ExtResource( 2 )]
position = Vector2( 198, 27 )

[node name="EnemyStart" type="Position2D" parent="."]
position = Vector2( 204, 30 )

[node name="EnemyEnd" type="Position2D" parent="."]
position = Vector2( 198, 54 )

[node name="Bullets" type="Node" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Turrets" type="Node2D" parent="."]
z_index = 1

[node name="Inventory" type="Node2D" parent="."]
position = Vector2( 217, 1 )
z_index = 1
script = ExtResource( 5 )
num_turrets = 200

[node name="Background" type="NinePatchRect" parent="Inventory"]
margin_right = 22.0
margin_bottom = 118.0
rect_min_size = Vector2( 22, 118 )
texture = ExtResource( 9 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggableTurrets" type="Node2D" parent="Inventory"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="EnemySpawn" type="Timer" parent="."]
one_shot = true

[node name="Text" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Text"]
margin_left = 81.0
margin_top = 5.0
margin_right = 147.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 10 )
text = "Congrats, you win
Thanks for playing"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="draggable_turret_button_down" from="Inventory" to="." method="_on_Inventory_draggable_turret_button_down"]
[connection signal="draggable_turret_button_up" from="Inventory" to="." method="_on_Inventory_draggable_turret_button_up"]
[connection signal="start_pressed" from="HUD" to="." method="_on_HUD_start_pressed"]
[connection signal="stop_pressed" from="HUD" to="." method="_on_HUD_stop_pressed"]
[connection signal="timeout" from="EnemySpawn" to="." method="_on_EnemySpawn_timeout"]
